# Elegance

./: CMakeLists.txt  README.md  create_gtags.sh
cmake_build/: CMakeLists.txt
database/: mysql_connector.cpp  mysql_connector.hpp  test.cpp
demo/: CMakeLists.txt
demo/src/: demo.cpp  demo.hpp  test_bytearray.cpp  test_network.cpp  test_serialize_network.cpp
demo/src/serialize_demo/: test_serialize.cpp
demo/vs2015project/: elegance_demo.sln  elegance_demo.vcxproj  elegance_demo.vcxproj.filters
elegance/: elegance.hpp
elegance/common/: debug_message.cpp  debug_message.hpp  tools.cpp
elegance/memory/: mempool.cpp  mempool.hpp
elegance/memory/byte_array/: queue_byte_array.cpp  queue_byte_array.hpp  static_byte_array.cpp  static_byte_array.hpp
elegance/memory/serialize/: serialize_manager.cpp
elegance/network/: network_manager.cpp  network_manager.hpp  network_packer_factory.cpp  network_packer_factory.hpp
elegance/network/network_packer/: network_packer_fixhead.cpp
elegance/platform/: platform_def.hpp
elegance/platform/common/: system_info.cpp  system_info.hpp  timer.cpp  timer.hpp
elegance/platform/network/: socket_accept.cpp  socket_connect.cpp  socket_connect.hpp  socket_def.hpp
elegance/platform/thread/: mutex.cpp  mutex.hpp  signal.cpp  signal.hpp  thread.cpp  thread.hpp  thread_pool.cpp  thread_pool.hpp
elegance/rpc/: rpc_manager.cpp  rpc_manager.hpp
serialize_tools/: login_proto.xml  protocol_creator.py
serialize_tools/creator/: cpp_creator.py
src/: elegance.hpp  platform_def.hpp
src/common/: byte_array.cpp  debug_message.cpp  debug_message.hpp  random.cpp  random.hpp  tools.cpp
src/game/: game.cpp  game.hpp
src/memory/: byte_array.cpp  byte_array.hpp  flexible_buffer.hpp  mempool.cpp  mempool.hpp
src/memory/serialize/: serialize_base.cpp  serialize_base.hpp  serialize_manager.cpp  serialize_manager.hpp
src/memory/serialize/py_tools/: protocol_creator.py
src/module/: i_module.hpp  module_driver.cpp  module_driver.hpp
src/network/: accept_session.cpp  accept_session.hpp  byteArray.cpp  byteArray.h  connect_session.cpp  connect_session.hpp  i_network.hpp  network.cpp  network.hpp  network_basic.hpp  network_manager.cpp  network_manager.hpp  network_packer_factory.hpp  protobuf_network.cpp  protobuf_network.h  protobuf_network.hpp  socket_data.hpp
src/network/network_packer/: network_packer_fixhead.cpp  network_packer_fixhead.hpp
src/platform/: platform_def.hpp
src/platform/common/: system_info.cpp  system_info.hpp  timer.cpp  timer.hpp
src/platform/network/: i_socket_handler.hpp  network_def.hpp  socket.hpp  socket_accept.cpp  socket_accept.hpp  socket_connect.cpp  socket_connect.hpp  socket_def.hpp
src/platform/thread/: condition.cpp  condition.hpp  mutex.cpp  mutex.hpp  signal.cpp  signal.hpp  thread.cpp  thread.hpp  thread_pool.cpp  thread_pool.hpp
src/rpc/: rpc_manager.cpp  rpc_manager.hpp
src/thread/: thread.cpp  thread.hpp
src_old/common/: tools.hpp
src_old/network/: accept_session.cpp  connect_session.cpp  connect_session.hpp  network.hpp  network_basic.hpp  socket_data.hpp
src_old/rpc/: rpc_manager.cpp  rpc_manager.hpp
tools/: project_creator.sh  serialize_creator.py
tools/project_creator/: CMakeLists.txt
tools/project_creator/VS2015_project/: EleganceHelloworld.sln  EleganceHelloworld.vcxproj  EleganceHelloworld.vcxproj.filters
tools/project_creator/src/: main.cpp
tools/serialize_creator/: cpp_creator.py
vs2015project/: Elegance.sln  Elegance.vcproj  Elegance.vcxproj  Elegance.vcxproj.filters  elegance.vcxproj  elegance.vcxproj.filters
